--- a/charts_common/pubspec.yaml
+++ b/charts_common/pubspec.yaml
@@ -2,7 +2,7 @@ name: charts_common
 version: 0.9.0
 description: A common library for charting packages.
 author: Charts Team <charts_flutter@google.com>
-homepage: https://github.com/google/charts
+homepage: https://github.com/jlxmall/charts
 
 environment:
   sdk: '>=2.3.0 <3.0.0'
